Improving the linking

--- a/FrontEnd/CartPage.html
+++ b/FrontEnd/CartPage.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="../image/Logo.png">
     <!-- <link rel="stylesheet" href="../CSS/homePage.css"> -->
-    <link rel="stylesheet" href="../FrontEnd/CSS/cart.css">
-    <link rel="stylesheet" href="../FrontEnd/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/cart.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <title>Cart | fashionfactory</title>
 </head>
 
@@ -18,7 +18,7 @@
     <!-- Navigation Bar -->
     <section class="navbar">
         <div class="uppernav">
-            <a href="index.html"><img src="../FrontEnd/image/Logo-1.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="./image/Logo-1.png" alt="logo" class="logo" /></a>
             <div class="navSearch">
                 <img src="https://i.postimg.cc/90c6jfMm/search-interface-symbol.png" alt="search"
                     class="NavSearchIcon" />
@@ -49,8 +49,8 @@
         <div class="bottomNav">
             <div class="nav-menu">
                 <ul>
-                    <li class="dropdown" onclick="window.location.href='viewall.html'">View All</li>
-                    <li class="dropdown" onclick="window.location.href='WomenWestern.html'">Women Western
+                    <li class="dropdown" onclick="window.location.href='#'">View All</li>
+                    <li class="dropdown" onclick="window.location.href='#'">Women Western
                         <div class="submenu">
                             <div class="subCat">
                                 <span class="catHeading">Topwear</span>
@@ -69,8 +69,8 @@
                             </div>
                         </div>
                     </li>
-                    <li onclick="window.location.href='Jewellery.html'">Jewellery & Accessories</li>
-                    <li onclick="window.location.href='Men.html'">Men</li>
+                    <li onclick="window.location.href='#'">Jewellery & Accessories</li>
+                    <li onclick="window.location.href='#'">Men</li>
                     <li>Beauty & Health</li>
                     <li>Bath & Body</li>
                     <li>Bags & Footwear</li>
@@ -162,4 +162,4 @@
 </body>
 
 </html>
-<script src="../FrontEnd/JS/cart.js"></script>
+<script src="./JS/cart.js"></script>
