--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -31,7 +31,7 @@
                     <img src="https://i.postimg.cc/sXqr2Fz4/smartphone.png" alt="app" class="navAppIcon" />
                     <span id="tagDwn">Download App</span>
                 </div>
-                <a href="../FrontEnd/adminSign.html"><span class="navSuplier">Admin</span></a>
+                <a href="./adminSign.html"><span class="navSuplier">Admin</span></a>
                 <div class="navProfile" onclick="window.location.href='signin.html'">
                     <img src="https://i.postimg.cc/wjtLkcVz/user.png" alt="account" class="navAccountIcon" />
                     <span class="SignUpHover">Profile</span>
@@ -46,8 +46,8 @@
         <div class="bottomNav">
             <div class="nav-menu">
                 <ul>
-                    <li class="dropdown" onclick="window.location.href='viewall.html'">View All</li>
-                    <li class="dropdown" onclick="window.location.href='WomenWestern.html'">Women Western
+                    <li class="dropdown" onclick="window.location.href='#'">View All</li>
+                    <li class="dropdown" onclick="window.location.href='#'">Women Western
                         <div class="submenu">
                             <div class="subCat">
                                 <span class="catHeading">Topwear</span>
@@ -66,8 +66,8 @@
                             </div>
                         </div>
                     </li>
-                    <li onclick="window.location.href='Jewellery.html'">Jewellery & Accessories</li>
-                    <li onclick="window.location.href='Men.html'">Men</li>
+                    <li onclick="window.location.href='#'">Jewellery & Accessories</li>
+                    <li onclick="window.location.href='#'">Men</li>
                     <li>Beauty & Health</li>
                     <li>Bath & Body</li>
                     <li>Bags & Footwear</li>
