--- a/FrontEnd/product_description.html
+++ b/FrontEnd/product_description.html
@@ -30,7 +30,7 @@
                     <span id="tagDwn">Download App</span>
                 </div>
                 <span class="navSuplier">Become a Supplier</span>
-                <div class="navProfile" onclick="window.location.href='SignUpPage.html'">
+                <div class="navProfile" onclick="window.location.href='signin.html'">
                     <img src="https://i.postimg.cc/wjtLkcVz/user.png" alt="account" class="navAccountIcon" />
                     <span class="SignUpHover">Profile</span>
                 </div>
