--- a/FrontEnd/signin.html
+++ b/FrontEnd/signin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>fashionfactory Sign up/Login Form</title>
-  <link rel="stylesheet" href="../FrontEnd/CSS/signin.css">
+  <link rel="stylesheet" href="./CSS/signin.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
@@ -32,4 +32,4 @@
 	</div>
 </body>
 </html>
-<script defer src="../FrontEnd/JS/signIn.js"></script>
+<script defer src="./JS/signIn.js"></script>
