--- a/FrontEnd/checkout.html
+++ b/FrontEnd/checkout.html
@@ -8,9 +8,9 @@
       rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="../image/Logo.png">
-    <link rel="stylesheet" href="../FrontEnd/CSS/homePage.css">
-    <link rel="stylesheet" href="../FrontEnd/CSS/index.css">
-    <link rel="stylesheet" href="../FrontEnd/CSS/checkout.css">
+    <link rel="stylesheet" href="./CSS/homePage.css">
+    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/checkout.css">
     
     <title>Order Placed Successfully | fashionfactory</title>
     
@@ -51,8 +51,8 @@
       <div class="bottomNav">
           <div class="nav-menu">
               <ul>
-                  <li class="dropdown" onclick="window.location.href='viewall.html'">View All</li>
-                  <li class="dropdown" onclick="window.location.href='WomenWestern.html'">Women Western
+                  <li class="dropdown" onclick="window.location.href='#'">View All</li>
+                  <li class="dropdown" onclick="window.location.href='#'">Women Western
                       <div class="submenu">
                           <div class="subCat">
                               <span class="catHeading">Topwear</span>
