Little improvement made in Payments page

--- a/FrontEnd/PaymentPage.html
+++ b/FrontEnd/PaymentPage.html
@@ -18,69 +18,68 @@
   <!-- Navigation Bar -->
   <section class="navbar">
     <div class="uppernav">
-        <a href="index.html"><img src="./image/Logo-1.png"
-                alt="logo" class="logo" /></a>
-        <div class="navSearch">
-             <img src="https://i.postimg.cc/90c6jfMm/search-interface-symbol.png" alt="search"
-                class="NavSearchIcon" />
-            <!-- <input type="text" id="keyword" class="searchContainer"
+      <a href="index.html"><img src="./image/Logo-1.png" alt="logo" class="logo" /></a>
+      <div class="navSearch">
+        <img src="https://i.postimg.cc/90c6jfMm/search-interface-symbol.png" alt="search" class="NavSearchIcon" />
+        <!-- <input type="text" id="keyword" class="searchContainer"
                 placeholder="Try Saree,Kurthi or Seach by Product Code" onkeypress="handleKeyPress(event)" />  -->
-                
-                <input id="search" class="searchContainer" oninput="search()" type="text" placeholder="Try Saree,Kurthi or Seach by Product Code">
 
+        <input id="search" class="searchContainer" oninput="search()" type="text"
+          placeholder="Try Saree,Kurthi or Seach by Product Code">
+
+      </div>
+      <div class="navRightSec">
+        <div class="navAppPromo">
+          <img src="https://i.postimg.cc/sXqr2Fz4/smartphone.png" alt="app" class="navAppIcon" />
+          <span id="tagDwn">Download App</span>
         </div>
-        <div class="navRightSec">
-            <div class="navAppPromo">
-                <img src="https://i.postimg.cc/sXqr2Fz4/smartphone.png" alt="app" class="navAppIcon" />
-                <span id="tagDwn">Download App</span>
-            </div>
-            <span class="navSuplier">Become a Supplier</span>
-            <!-- <div class="navProfile" onclick="window.location.href='signIn.html'">
+        <span class="navSuplier">Become a Supplier</span>
+        <!-- <div class="navProfile" onclick="window.location.href='signIn.html'">
                 <img src="https://i.postimg.cc/wjtLkcVz/user.png" alt="account" class="navAccountIcon" />
                 <span class="SignUpHover">Profile</span>
             </div> -->
-            <div class="navcart" onclick="window.location.href='CartPage.html'">
-                <img src="https://i.postimg.cc/sXBgkwMf/bag.png" alt="cart" class="cartIcon" />
-                <span class="SignUpHover" onclick="window.location.href='CartPage.html'">Cart</span>
-            </div>
-            <!-- <div id="cart-item-counter">0</div> -->
+        <div class="navcart" onclick="window.location.href='CartPage.html'">
+          <img src="https://i.postimg.cc/sXBgkwMf/bag.png" alt="cart" class="cartIcon" />
+          <span class="SignUpHover" onclick="window.location.href='CartPage.html'">Cart</span>
         </div>
+        <!-- <div id="cart-item-counter">0</div> -->
+      </div>
     </div>
     <div class="bottomNav">
-        <div class="nav-menu">
-            <ul>
-                <li class="dropdown" onclick="window.location.href='#'">View All</li>
-                <li class="dropdown" onclick="window.location.href='#'">Women Western
-                    <div class="submenu">
-                        <div class="subCat">
-                            <span class="catHeading">Topwear</span>
-                            <span>Dresses</span>
-                            <span>Tops</span>
-                            <span>Sweaters</span>
-                            <span>Jumpsuits</span>
-                        </div>
-                        <div class="subCat" style="margin-left: 1em;">
-                            <span class="catHeading">Bottomwear</span>
-                            <span>Jeans</span>
-                            <span>Jeggings</span>
-                            <span>Palazzos</span>
-                            <span>Shorts</span>
-                            <span>Skirts</span>
-                        </div>
-                    </div>
-                </li>
-                <li onclick="window.location.href='#'">Jewellery & Accessories</li>
-                <li onclick="window.location.href='#'">Men</li>
-                <li>Beauty & Health</li>
-                <li>Bath & Body</li>
-                <li>Bags & Footwear</li>
-                <li>Home & Kitchen</li>
-                <li>Kids</li>
-                <li>Electronics</li>
-            </ul>
-        </div>
+      <div class="nav-menu">
+        <ul>
+          <li class="dropdown" onclick="window.location.href='#'">View All</li>
+          <li class="dropdown" onclick="window.location.href='#'">Women Western
+            <div class="submenu">
+              <div class="subCat">
+                <span class="catHeading">Topwear</span>
+                <span>Dresses</span>
+                <span>Tops</span>
+                <span>Sweaters</span>
+                <span>Jumpsuits</span>
+              </div>
+              <div class="subCat" style="margin-left: 1em;">
+                <span class="catHeading">Bottomwear</span>
+                <span>Jeans</span>
+                <span>Jeggings</span>
+                <span>Palazzos</span>
+                <span>Shorts</span>
+                <span>Skirts</span>
+              </div>
+            </div>
+          </li>
+          <li onclick="window.location.href='#'">Jewellery & Accessories</li>
+          <li onclick="window.location.href='#'">Men</li>
+          <li>Beauty & Health</li>
+          <li>Bath & Body</li>
+          <li>Bags & Footwear</li>
+          <li>Home & Kitchen</li>
+          <li>Kids</li>
+          <li>Electronics</li>
+        </ul>
+      </div>
     </div>
-</section>
+  </section>
   </section>
   <section class="blurBack"></section>
   <section class="cartSection">
@@ -119,53 +118,53 @@
       <div>
         <p class="warning-message">Clicking on Continue will not deduct any money</p>
       </div>
-      <a href="./checkout.html"><button class="cart-continue-button" id="placeOrder">Place Order</button></a>
+      <button class="cart-continue-button" id="placeOrder">Place Order</button>
     </div>
   </section>
   <!-- Footer -->
 
   <hr>
 
-  
+
   <div id="footer">
     <div class="block-1">
-        <h2>Shop Non-Stop on Meesho</h2> <br>
-        <p>Trusted by more than 1 Crore Indians <br>
-            Cash on Delivery | Free Delivery</p>
-        <img class="playstore" src="../image/playstore.png" alt="">
+      <h2>Shop Non-Stop on Meesho</h2> <br>
+      <p>Trusted by more than 1 Crore Indians <br>
+        Cash on Delivery | Free Delivery</p>
+      <img class="playstore" src="../image/playstore.png" alt="">
     </div>
     <div class="block-2">
-        <a href="#">
-            <h5>Career</h5>
-        </a>
-        <a href="#">
-            <h5>Become a supplier</h5>
-        </a>
-        <a href="#">
-            <h5>Hall of Fame</h5>
-        </a>
+      <a href="#">
+        <h5>Career</h5>
+      </a>
+      <a href="#">
+        <h5>Become a supplier</h5>
+      </a>
+      <a href="#">
+        <h5>Hall of Fame</h5>
+      </a>
     </div>
     <div class="block-3">
-        <a href="#">
-            <h5>FF Tech Blog</h5>
-        </a>
-        <a href="#">
-            <h5>Notices and Returns</h5>
-        </a>
+      <a href="#">
+        <h5>FF Tech Blog</h5>
+      </a>
+      <a href="#">
+        <h5>Notices and Returns</h5>
+      </a>
     </div>
     <div class="block-4">
-        <h4>Reach Us Out</h4>
+      <h4>Reach Us Out</h4>
     </div>
     <div class="block-5">
-        <h4>Contacts</h4>
-        <p class="para">ashnear Technologies Private Limited,<br>
-            CIN: U74900KA2015PTC082263 <br>
-            06-105-B, 06-102, (138 Wu) <br> Vaishnavi Signature, No. 78/9,<br> Outer Ring Road, Bellandur,<br>
-            Varthur Hobli, Bengaluru-560103,<br> Karnataka, India <br>
-            E-mail address: query@ff.com <br>
-            © 2015-2022 fashionfactory.com</p>
+      <h4>Contacts</h4>
+      <p class="para">ashnear Technologies Private Limited,<br>
+        CIN: U74900KA2015PTC082263 <br>
+        06-105-B, 06-102, (138 Wu) <br> Vaishnavi Signature, No. 78/9,<br> Outer Ring Road, Bellandur,<br>
+        Varthur Hobli, Bengaluru-560103,<br> Karnataka, India <br>
+        E-mail address: query@ff.com <br>
+        © 2015-2022 fashionfactory.com</p>
     </div>
-</div>
+  </div>
 </body>
 
 </html>
@@ -173,29 +172,36 @@
   let total = sessionStorage.getItem("total")
   let product_charges = document.getElementById("product-charges");
   let order_total = document.getElementById("order_total");
-  // var arr = JSON.parse(localStorage.getItem("product_data")) || [];
-  // var sum = 0;
-  // appendData_sum(sum)
+  let orderPlaced = document.getElementById("placeOrder")
+  let token = sessionStorage.getItem("token");
 
-  // function clickfunction() {
-  //   localStorage.removeItem("product_data")
+
+  if (total - 100 > 0) {
+    order_total.textContent = `₹${total - 100}.00/-`;
+  } else {
+    order_total.textContent = 0;
+  };
+  product_charges.textContent = `₹${total}.00/-`;
+
+  orderPlaced.addEventListener("click", () => {
+    async function deleteAllDataFromCart() {
+      let data = await fetch(`https://good-cyan-goat-kilt.cyclic.app/cart/deleteAllItemFromCart`, {
+        method: "DELETE",
+        headers: {
+          "Content-Type": "application/json",
+          authorization: token
+        }
+      })
+      let res = await data.json();
+      // console.log(res.message);
+      if (res.message == "All items deleted from the cart") {
+        alert("Order placed thank you for the shopping")
+        window.location.href = "./checkout.html"
+      }else{
+        alert("Something Went Wrong!!")
+      }
+    }
+    deleteAllDataFromCart()
+  })
   // }
-
-  // var placOrder = document.getElementById("placeOrder")
-  // placOrder.addEventListener("click", clickfunction);
-
-
-
-  // function appendData_sum(sum) {
-  //   arr.forEach((elem) => {
-  //     sum = sum + elem.price;
-  //   })
-    
-    if (total - 100 > 0) {
-      order_total.textContent = `₹${total - 100}.00/-`;
-    } else {
-      order_total.textContent = 0;
-    };
-    product_charges.textContent = `₹${total}.00/-`;
-  // }   
 </script>
