Maintaining singin page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -159,7 +159,7 @@
 
     <div id="footer">
         <div class="block-1">
-            <h2>Shop Non-Stop on Meesho</h2> <br>
+            <h2>Shop Non-Stop on fashionfactory</h2> <br>
             <p>Trusted by more than 1 Crore Indians <br>
                 Cash on Delivery | Free Delivery</p>
             <img class="playstore" src="./image/playstore.png" alt="">
